# darkest

./: .gitattributes  Cargo.toml  README.md
assets/: battleaxe.glb  battleaxe.gltf  npc.glb  npc.glb.REMOVED.git-id
assets/Pro Melee Axe Pack/: Ch10_nonPBR.fbx.REMOVED.git-id  crouch idle.fbx  crouch to standing idle.fbx  standing block idle.fbx  standing block react large.fbx  standing disarm over shoulder.fbx  standing disarm underarm.fbx  standing idle looking ver. 1.fbx  standing idle looking ver. 2.fbx  standing idle.fbx  standing jump.fbx  standing melee attack 360 high.fbx  standing melee attack 360 low.fbx  standing melee attack backhand.fbx  standing melee attack downward.fbx  standing melee attack horizontal.fbx  standing melee attack kick ver. 1.fbx  standing melee attack kick ver. 2.fbx  standing melee combo attack ver. 1.fbx  standing melee combo attack ver. 2.fbx  standing melee combo attack ver. 3.fbx  standing melee run jump attack.fbx  standing react large from left.fbx  standing react large from right.fbx  standing react large gut.fbx  standing run back.fbx  standing run forward.fbx  standing taunt battlecry.fbx  standing taunt chest thump.fbx  standing turn left 90.fbx  standing turn right 90.fbx  standing walk back.fbx  standing walk forward.fbx  standing walk left.fbx  standing walk right.fbx  unarmed equip over shoulder.fbx  unarmed equip underarm.fbx  unarmed idle.fbx  (+10 more)
blender/: battleaxe.blend  lobby.blend  lobby.blend1  npc.blend
src/: assets.rs  config.rs  editor_pls.rs  fps.rs  game.rs  lib.rs  npc.rs  player.rs  weapon.rs  world.rs
(+124 files in other folders)
