[package]
name = "darkest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", "features"=["jpeg"] }
bevy_asset_loader = { version = "0.12.1", features = ["3d", "progress_tracking"] }
bevy_editor_pls = "0.1.1"
bevy_rapier3d = "0.17.0"
derive_more = "0.99.17"
iyes_progress = "0.5.0"
serde = "1.0.145"
smooth-bevy-cameras = "0.5.0"
